# lazy-snark

./: .gitignore  README.md
backend_fluence/: Cargo.toml  README.md
backend_fluence/src/: error_type.rs  lib.rs  proof_manager.rs  request_response.rs
backend_zk/: Cargo.toml  README.md  proof.json  root.code  vk.key
backend_zk/src/: circuit.rs  lib.rs  main.rs
frontend/: README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
test_back_fluence/: Cargo.toml  proof.json  proof.key  verification.key
test_back_fluence/src/: main.rs
truffle/: README.md  package-lock.json  package.json  truffle.js
truffle/contracts/: IVerifier.sol  Lazy.sol  Structs.sol  Verifier.sol  VerifierProxy.sol  lazy.sol
truffle/migrations/: 2_deploy_lazy.js
truffle/test/: test.js
